# environment-monitor-core

./: .gitignore  CMakeLists.txt  README.md
cmake/: avr-toolchain.cmake
environment_core/: main.cpp
environment_core/src/blink/: blink.h
environment_core/src/board/: arduino_uno.cpp  arduino_uno.h  base_board.hpp
environment_core/src/output_modules/: traffic_light.cpp  traffic_light.h
environment_core/src/outputs/: traffic_light.c  traffic_light.h
environment_core/src/sos/: sos.h
environment_core_src/: main.cpp
environment_core_src/board/: arduino_uno.cpp  arduino_uno.h  base_board.hpp
environment_core_src/input_modules/: Dht22.cpp  Dht22.h
environment_core_src/output_modules/: led.cpp  led.h  traffic_light.h
environment_core_src/protocols/: uart.hpp
environment_core_src/tools/: Timer.cpp  Timer.h
latex-doc/: environment_monitor_core.tex
latex-doc/chapters/firmware/: firmware.tex  firmware101.tex
legacy_code/blink/: blink.c
legacy_code/sos/: sos.c
web_service/: CMakeLists.txt
web_service/src/: main.cpp
web_service/src/controller/: controller.cpp  controller.h
web_service/src/ports/: serial_port.hpp
web_service/www/: index.html
